--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Marian Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -49,8 +49,8 @@
                     </div>
                     <p class="lead mb-5">Hi! My name is Marian and I’m currently attending the University of Rochester. I’m majoring in computer science and interested in pursuing a career in software engineering. I’m open to any technology-related opportunities to assist me on my life-long journey!</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/marian-cespedes-4a64aa1a9/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/mccm707"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
